# generated/Model/SearchRequest.php
@@ -47,6 +47,20 @@ class SearchRequest extends \ArrayObject
     protected $region;
 
     /**
+     * The latitude used when performing a search. If the search request was deleted, this value will be null.
+     *
+     * @var float|null
+     */
+    protected $latitude;
+
+    /**
+     * The longitude used when performing a search. If the search request was deleted, this value will be null.
+     *
+     * @var float|null
+     */
+    protected $longitude;
+
+    /**
      * The status of the search request. If the search request was deleted, this value will be null.
      *
      * @var mixed
@@ -197,6 +211,56 @@ class SearchRequest extends \ArrayObject
     {
         $this->initialized['region'] = true;
         $this->region = $region;
+
+        return $this;
+    }
+
+    /**
+     * The latitude used when performing a search. If the search request was deleted, this value will be null.
+     *
+     * @return float|null
+     */
+    public function getLatitude(): ?float
+    {
+        return $this->latitude;
+    }
+
+    /**
+     * The latitude used when performing a search. If the search request was deleted, this value will be null.
+     *
+     * @param float|null $latitude
+     *
+     * @return self
+     */
+    public function setLatitude(?float $latitude): self
+    {
+        $this->initialized['latitude'] = true;
+        $this->latitude = $latitude;
+
+        return $this;
+    }
+
+    /**
+     * The longitude used when performing a search. If the search request was deleted, this value will be null.
+     *
+     * @return float|null
+     */
+    public function getLongitude(): ?float
+    {
+        return $this->longitude;
+    }
+
+    /**
+     * The longitude used when performing a search. If the search request was deleted, this value will be null.
+     *
+     * @param float|null $longitude
+     *
+     * @return self
+     */
+    public function setLongitude(?float $longitude): self
+    {
+        $this->initialized['longitude'] = true;
+        $this->longitude = $longitude;
 
         return $this;
     }
